--- a/action.yml
+++ b/action.yml
@@ -98,6 +98,10 @@ inputs:
   github-server-url:
     description: The base URL for the GitHub instance that you are trying to clone from, will use environment defaults to fetch from the same instance that the workflow is running from unless specified. Example URLs are https://github.com or https://my-ghes-server.example.com
     required: false
+  keep:
+    description: 'If false, existing content under the repository will be forced removed before fetching'
+    required: false
+    default: true
 outputs:
   ref:
     description: 'The branch, tag or SHA that was checked out'
